src/test/resources/semantic/custom/reject/printArrayType.ul
void main() {
}

void foo() {
    int[5] array;
    print array;
}
